--- a/templates/basic.html
+++ b/templates/basic.html
@@ -33,6 +33,7 @@
           body: JSON.stringify(out)
         }
         )
+        location.href = "/app/ai"
       }
       return html`
         <div class="w-screen fixed bottom-0 flex flex-col items-center justify-center bg-white h-20">
@@ -82,11 +83,13 @@
       const drinkItems = ["Fanta", "Coke", "Water", "Mountain Dew"]
 
       return html`
-        <div class="space-y-2 h-screen w-screen h-screen">
+        <div class="space-y-2 h-screen w-screen">
           <p class="text-center text-gray-400">Tip: tap on an item to add it to your cart!</p>
-          <div class="itemgrid overflow-auto h-[calc(100vh-8rem)]">
+          <div class="itemgrid overflow-auto ">
             ${items.map(item => html`<${Food} name=${item} setlist=${setFoods} list=${foods}  />`)}
-            <hr>
+          </div>
+          <hr />
+          <div class="itemgrid overflow-auto h-[calc(100vh-8rem)]">
             ${drinkItems.map(item => html`<${Food} name=${item} setlist=${setDrinks} list=${drinks}  />`)}
           </div>
 
