--- a/templates/home.html
+++ b/templates/home.html
@@ -4,15 +4,15 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="p-3 text-center flex items-center justify-center h-screen flex-col ">
+<body class="p-3 text-center flex items-center justify-center h-screen flex-col text-3xl">
   <div class="max-w-lg">
     <h1 class="text-3xl italic">Welcome!</h1>
-    <h2 class="text-2xl m-3">You are about to be brought to an app, similar to a fast food kiosk. There, you will order
+    <h2 class=" m-3">You are about to be brought to an app, similar to a fast food kiosk. There, you will order
       some
       food like normal...
     </h2>
     <hr class="w-full">
-    <h2 class="text-2xl m-3">Then, a very different UI will be presented to you. One with just a simple textbox. Here,
+    <h2 class=" m-3">Then, a very different UI will be presented to you. One with just a simple textbox. Here,
       you
       can order using
       human language! Try and order the same foods you did before!</h2>
