added what you said text

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
       food like normal...
     </h2>
     <hr class="w-full">
-    <h2 class=" m-3">Then, a very different UI will be presented to you. One with just a simple textbox. Here,
+    <h2 class=" m-3">Then, a very different UI will be presented to you. One with just a simple button that activates your microphone. Here,
       you
       can order using
       human language! Try and order the same foods you did before!</h2>
