--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
     <h2 class=" m-3">Then, a very different UI will be presented to you. One with just a simple button that activates your microphone. Here,
       you
       can order using
-      human language! Try and order the same foods you did before!</h2>
+      your voice like talking to a human! Try and order the same foods you did before!</h2>
     <div class="flex justify-center items-cetner" href="/app/basic">
       <a href="/app/basic">
         <img src="https://api.iconify.design/material-symbols:arrow-forward.svg" alt="" class="scale-[3] items-center">
